--- a/src/style.css
+++ b/src/style.css
@@ -38,3 +38,12 @@ body {
 	width: 100%;
 	height: 100%;
 }
+
+#gui {
+	position: fixed;
+	right: 20px;
+	display: flex;
+	align-items: flex-start;
+	gap: 20px;
+	z-index: 9999;
+}
