--- a/src/style.css
+++ b/src/style.css
@@ -47,3 +47,40 @@ body {
 	gap: 20px;
 	z-index: 9999;
 }
+
+#resetCamera {
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	background-color: whitesmoke;
+	border-radius: 2px;
+	padding: 1rem 1.25rem;
+	z-index: 9999;
+	color: black;
+	border: none;
+	cursor: pointer;
+}
+
+.loader {
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	height: 100dvh;
+	display: grid;
+	place-items: center;
+	z-index: 999999;
+	background: #f2f2f2;
+}
+
+.loader p {
+	color: #242424;
+}
+
+.error {
+	width: 100%;
+	height: 100vh;
+	height: 100dvh;
+	display: grid;
+	place-items: center;
+	background: #f2f2f2;
+}
